--- a/three-js-ts/tsconfig.json
+++ b/three-js-ts/tsconfig.json
@@ -18,7 +18,14 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+
+    "typeRoots": [
+        "types",
+        "node_modules/@types"
+      ]
+    
   },
   "include": ["src"]
 }
