--- a/three-js-ts/package.json
+++ b/three-js-ts/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "lil-gui": "^0.19.2",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   },
